[package]
name = "kw-search-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["json", "multipart"] }
tokio = { version = "1.39.0", features = ["full"] }
thiserror = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tantivy = "0.22.0"
uuid = "1.3"
tar = "0.4.43"
tempfile = "3.15.0"
