[package]
name = "kw-search-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["json", "multipart"] }
clap = { version = "4.5", features = ["derive"] }
http = "1.2.0"
once_cell = "1.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tantivy = "0.22.0"
tar = "0.4.43"
thiserror = "2"
tokio = { version = "1.39.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5.4"
uuid = "1.12"
endpoints = { version = "=0.24.0", features = [
    "rag",
    "index",
], git = "https://github.com/LlamaEdge/LlamaEdge.git", branch = "feat-kw-search" }
